[package]
name = "ip_sniffer"
version = "0.2.0"
edition = "2021"
authors = ["Rasoul Hesami Rostami"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
bpaf = { version = "0.9.5", features = ["derive", "bright-color"] }
